bitfields/tests/compile_error_cases/errors/bitfield_field_too_small_for_default_value.rs
use bitfields::bitfield;

#[bitfield(u16)]
pub struct Bitfield {
    #[bits(default = 0xFFFF)]
    a: u8,
    #[bits(default = 1)]
    b: u8,
}

fn main() {}
