bitfields/tests/compile_error_cases/errors/bitfield_field_too_small_for_default_value.stderr
error: The default value '65535' exceeds the maximum value for the specified '8 bits (255)'.
 --> tests/compile_error_cases/errors/bitfield_field_too_small_for_default_value.rs:5:22
  |
5 |     #[bits(default = 0xFFFF)]
  |                      ^^^^^^
